debathena-thirdparty (1.2) unstable; urgency=low

  * Add git-buildpackage configuration
  * Set source format to 3.0 (native)

 -- Alexander Chernyakhovsky <achernya@mit.edu>  Sun, 29 Sep 2013 05:24:10 -0400

debathena-thirdparty (1.1) unstable; urgency=low

  * Supply an athinfo defs file
  * Cleanup the status and update_required files in the prerm
  * Build-Depend, not Depend, on libapt-pkg-perl

 -- Jonathan Reed <jdreed@mit.edu>  Wed, 03 Apr 2013 15:53:45 -0400

debathena-thirdparty (1.0) unstable; urgency=low

  * Initial release (Trac: #1156)

 -- Jonathan Reed <jdreed@mit.edu>  Thu, 07 Mar 2013 14:50:54 -0500