@@ -1,10 +1,12 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
+%:
+	dh $@
 
-common-build-indep::
+override_dh_gencontrol:
 	./generate-package-list.pl
+	dh_gencontrol -- -Tthirdparty.substvars
 
-clean::
-	rm -f recommendations dependencies
-
+override_dh_clean:
+	dh_clean
+	rm -f thirdparty.substvars
