@@ -7,6 +7,7 @@ use locale; # for sort
 use Cwd qw(abs_path);
 use File::Basename;
 
+use File::Temp qw(tempdir);
 use Getopt::Std;
 use AptPkg::Config '$_config';
 use AptPkg::Cache;
@@ -24,6 +25,17 @@ sub debug {
     }
 }
 
+sub run_command {
+    my @cmd = @_;
+    debug("Running: " . join(' ', @cmd));
+    my $rv = system(@cmd);
+    if ($rv == -1) {
+	die "Failed to execute command: $!\n";
+    } elsif ($rv != 0) {
+	die "$cmd[0] died with status: " . ($? >> 8) . "\n";
+    }
+}
+
 my $codename = `lsb_release -sc`;
 die "Can't determine codename" unless ($? == 0);
 chomp($codename);
@@ -32,6 +44,24 @@ chomp($codename);
 (-d $opt_d) || die "$opt_d is not a directory";
 
 print "Using lists in $opt_l\nWriting output files to $opt_d\n";
+
+my $lsbrelease = `lsb_release -is`;
+chomp $lsbrelease;
+debug("lsb release: $lsbrelease");
+my $chdist_dir = tempdir(CLEANUP=>1);
+if ($lsbrelease eq 'Ubuntu') {
+    my $mirrorhost = 'localhost:9999';
+    if (exists($ENV{'MIRRORHOST'})) {
+	$mirrorhost = $ENV{'MIRRORHOST'};
+    }
+    debug("Ubuntu detected.");
+    run_command('chdist', '--data-dir', $chdist_dir, 'create', $codename,
+		'http://' . $mirrorhost . '/ubuntu', $codename,
+		'main', 'restricted', 'universe', 'multiverse');
+    run_command('chdist', '--data-dir', $chdist_dir,
+		'apt-get', $codename, 'update');
+    $ENV{'APT_CONFIG'} = join('/', $chdist_dir, $codename, 'etc/apt/apt.conf');
+}
 
 debug("Initializing APT cache");
 # Initialize the APT configuration
@@ -51,8 +81,7 @@ while (<COMMON>) {
     next if /^#/;
     next unless /\S/;
     if (/^-/) {
-	warn "Ignoring invalid package exclusion in the common file, line $.";
-	next;
+	die "Syntax error: package exclusion in the common file, line $.";
     } 
     if (/^(\S+) \| (\S+)$/) {
 	debug("Examining conditional line: $_");
@@ -81,30 +110,34 @@ while (<COMMON>) {
 }
 close(COMMON);
 
-open(DIST, join('/', $opt_l, $codename)) || die "Can't open $opt_l/$codename";
-debug("Reading distro-specific file");
-while (<DIST>) {
-    chomp;
-    s/^\s+//;
-    s/\s+$//;
-    next if /^#/;
-    next unless /\S/;
-    if (/^-(\S+)$/) {
-	if (exists($packages{$1})) {
-	    debug("Deleting $1 from package list.");
-	    delete($packages{$1});
+if (-f join('/', $opt_l, $codename)) {
+    open(DIST, join('/', $opt_l, $codename)) || die "Can't open $opt_l/$codename";
+    debug("Reading distro-specific file");
+    while (<DIST>) {
+	chomp;
+	s/^\s+//;
+	s/\s+$//;
+	next if /^#/;
+	next unless /\S/;
+	if (/^-(\S+)$/) {
+	    if (exists($packages{$1})) {
+		debug("Deleting $1 from package list.");
+		delete($packages{$1});
+	    } else {
+		warn("Package $1 is not in package list, so can't remove it.");
+	    }
+	} elsif (/^\?(\S+)$/) {
+	    debug("Adding $1 to recommendations");
+	    $packages{$1} = 2;
 	} else {
-	    warn("Package $1 is not in package list, so can't remove it.");
+	    debug("Adding $_ to dependencies");
+	    $packages{$_} = 1;
 	}
-    } elsif (/^\?(\S+)$/) {
-	debug("Adding $1 to recommendations");
-	$packages{$1} = 2;
-    } else {
-	debug("Adding $_ to dependencies");
-	$packages{$_} = 1;
     }
+    close(DIST);
+} else {
+    print "Note: No distro-specific file found.\n";
 }
-close(DIST);
 
 foreach my $pkgname (sort(keys(%packages))) {
     my $pkg = $cache->{$pkgname};
@@ -132,18 +165,24 @@ foreach my $pkgname (sort(keys(%packages))) {
     }
 }
 
-debug("Writing out lists");
-open(DEPS, '>', join('/', $opt_d, 'dependencies')) || die "Can't open $opt_d/dependencies for writing";
-open(RECS, '>', join('/', $opt_d, 'recommendations')) || die "Can't open $opt_d/dependencies for writing";
-foreach (sort(keys(%packages))) {
-    if ($packages{$_} == 2) {
-	print RECS "$_\n";
+my @recs = ();
+my @deps = ();
+foreach my $p (sort(keys(%packages))) {
+    if ($packages{$p} == 2) {
+	push @recs, $p;
     } else {
-	print DEPS "$_\n";
+	push @deps, $p;
+	if (exists($depends{$p})) {
+	    foreach (@{$depends{$p}}) {
+		debug("Adding $_ because we added $p");
+		push @deps, $_;
+	    }
+	}
     }
 }
-close(DEPS);
-close(RECS);
+open(SUBSTVARS, '>', join('/', $opt_d, 'thirdparty.substvars')) || die "Can't write to $opt_d/thirdparty.substvars";
+printf SUBSTVARS "debathena-thirdparty-depends=%s\n", join(',', @deps);
+printf SUBSTVARS "debathena-thirdparty-recommends=%s\n", join(',', @recs);
+close(SUBSTVARS);
 print "Done.\n";
 exit 0;
-	
